--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="/recipes/lasagna.html">Lasagna</a></li>
         <li><a href="/recipes/meatloaf.html">Meatloaf</a></li>
+        <li><a href="/recipes/sloppyjoe.html">Sloppy Joe</a></li>
     </ul>
 
   </body>
