--- a/recipes/sloppyjoe.html
+++ b/recipes/sloppyjoe.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>SLOPPY JOE</h1>
+    <img src="/assets/yoad-shejtman-qQk9XuedZzM-unsplash.jpg" alt="Image of sloppy Joe" width="400px">
 
     <h2>Description</h2>
     <p>
